assets/sidecar/local-only.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: client-egress
spec:
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
  - hosts: [./*, istio-system/*]
